2001-10-08  Bruno Haible  <haible@clisp.cons.org>

	* po-time.h: New file.
	* po-time.c: New file, extracted from xgettext.c.
	* xgettext.c: Include po-time.h.
	(difftm): Move to po-time.c.
	(construct_header): Move some code to po-time.c. Call po_strftime.
	* Makefile.am (noinst_HEADERS): Add po-time.h.
	(xgettext_SOURCES): Add po-time.c.

2001-09-29  Bruno Haible  <haible@clisp.cons.org>

	* user-email.in: New file.
	* Makefile.am (install-exec-local): Install user-email.
	(uninstall-local): Uninstall user-email.
	(DISTCLEANFILES): Add user-email.

2001-09-29  Bruno Haible  <haible@clisp.cons.org>

	* hostname.c: New file.
	* Makefile.am (noinst_PROGRAMS, hostname_SOURCES): New variables.
	(install-exec-local, installdirs-local, uninstall-local): New rules.

2001-10-10  Bruno Haible  <haible@clisp.cons.org>

	* msgexec.c (process_string): Update for changed create_pipe_bidi(),
	wait_subprocess().
	* msggrep.c (is_string_selected): Update for changed create_pipe_out(),
	wait_subprocess().
	* read-java.c (execute_and_read_po_output): Update for changed
	create_pipe_in(), wait_subprocess().

2001-01-08  Bruno Haible  <haible@clisp.cons.org>

	* xgettext.c (remember_a_message): When the comment tag is seen,
	remember all remaining comment lines, not just one.

2001-09-25  Bruno Haible  <haible@clisp.cons.org>

	Upgrade to automake-1.5.
	* Makefile.am (AUTOMAKE_OPTIONS): Add 'no-dependencies'.
	(COMMON_SOURCE): Renamed from COMMON_SOURCES.
	(FORMAT_SOURCE): Renamed from FORMAT_SOURCES.
	* ylwrap: Remove file.

2001-09-22  Bruno Haible  <haible@clisp.cons.org>

	* xgettext.c (extractor_func): New typedef.
	(scanner_fp): Remove typedef.
	(main): Use extractor_func and call it via extract_from_file.
	(extract_from_file): New function.
	(scan_c_file, scan_po_file, scan_java_file, scan_ycp_file,
	scan_rst_file): Remove functions.
	(language_to_extractor): Renamed from language_to_scanner.
	* x-c.h (SCANNERS_C): Use extract_c instead of scan_c_file.